gcc/testsuite/gdc.test/fail_compilation/fail10285.d
/*
TEST_OUTPUT:
---
fail_compilation/fail10285.d(9): Error: no identifier for declarator `int`
---
*/
enum
{
    int = 5
}
